<resources>
    <string name="app_name">FFJudo</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_inscription1">Inscription1Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="__connexion">CONNEXION</string>
    <string name="envoyer">envoyer</string>
    <string name="Envoyer">Envoyer</string>
    <string name="ENVOYER">ENVOYER</string>
    <string name="pas_licencie">Pas encore licencié ?</string>
    <string name="obtenir_compte">Obtenez votre compte licencié</string>
    <string name="prompt_email">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in_register"><b>HADJIME</b></string>
    <string name="action_sign_in_short">HADJIME</string>
    <string name="login_progress_signing_in">Connexion&#8230;</string>
    <string name="error_invalid_email">L\'identifiant est incorrect</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">Le champ est requis</string>
    <string name="Mes_Licences">Mes Licences</string>
    <string name="Deconnexion">Déconnexion</string>
    <string name="Ma_Licence">Ma Licence</string>
    <string name="Renouveler_licence">Renouveler ma licence</string>
    <string name="Arrivee">Arrivée</string>
    <string name="Depart">Départ</string>
    <string name="Arrivee_">Arrivée :</string>
    <string name="Depart_">Départ :</string>
    <string name="etape_1_2">Etape 1/2</string>
    <string name="etape_2_2">Etape 2/2</string>
    <string name="Ajout_licence">Ajout d\'une licence</string>
    <string name="Renouvellement">Renouveler ma licence</string>
    <string name="Creation_compte_licencie">Création du compte licencié</string>
    <string name="Numéro_de_licence">Numéro de licence</string>
    <string name="clé_exemple">Clé (voir ci dessous)</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Nos_partenaires">Nos partenaires</string>
    <string name="Mazda_vous_presente">Mazda vous présente</string>
    <string name="Mais_aussi">Mais aussi</string>
    <string name="A_propos">A propos</string>
    <string name="Federation_nom">FEDERATION FRANCAISE DE JUDO JUJITSU, KENDO et DISCIPLINES ASSOCIEES (FFJDA)</string>
    <string name="Federation_adresse">Association déclarée, conformément à la loi du 1er juillet 1901 modifiée et reconnue, comme établissement d\’utilité publique dont le siège est situé 21/25 avenue de la Porte de Châtillon – 75014 PARIS. 01.40.52.16.16.</string>
    <string name="Votre_avis">Votre avis</string>
    <string name="avis_a_propos">Si vous rencontrez un problème avec l\'application ou que vous avez des idées à nous soumettre, n\'hésitez pas à nous écrire, nous en tiendrons compte.</string>
    <string name="Merci_et">Merci et Hadjime.</string>
    <string name="envoyer_mail">Envoyer un mail</string>
    <string name="mail_subject">Remarque/Bug sur l\'application</string>
    <string name="Lancer">Lancer Vogo</string>
    <string name="Vogo">Vogo Sports</string>
    <string name="par_vogo">par Vogo</string>
    <string name="Description">Description</string>
    <string name="Description_1">VOGO Sport : Le deuxième écran de votre événement.</string>
    <string name="Description_2">Lorsque vous êtes dans l\'enceinte de la compétition, connectez vous au réseau Wi-fi \"Vogo\", sélectionnez la caméra que souhaitez visionner.
Visualisez le flux live ou revenez en arrière et revivez instantanément l\'action, soit en vitesse normale soit au ralenti.</string>
    <string name="Valider">Valider</string>
    <string name="choix_club">Veuillez choisir un club dans la liste</string>
    <string name="saisie_nouvelle_licence">Saisie d\'une nouvelle licence</string>
    <string name="__saisie_nouvelle_licence">SAISIE D\'UNE NOUVELLE LICENCE</string>
    <string name="suivant">Suivant</string>
    <string name="__suivant">SUIVANT</string>
    <string name="etape_1">Etape 1/3</string>
    <string name="etape_2">Etape 2/3</string>
    <string name="etape_3">Etape 3/3</string>
    <string name="_nom">Nom (*)</string>
    <string name="_prenom">Prénom (*)</string>
    <string name="_adresse_mail">Adresse mail (*)</string>
    <string name="Telephone">Téléphone</string>
    <string name="Adresse">Adresse (*)</string>
    <string name="_sexe">Sexe</string>
    <string name="_date_naissance">Date de naissance</string>
    <string name="_code_postal">Code postal (*)</string>
    <string name="Ville">Ville (*)</string>
    <string name="terminer">terminer</string>
    <string name="_terminer">Terminer</string>
    <string name="__terminer">TERMINER</string>
    <string-array name="sexe_arrays">
        <item>Féminin</item>
        <item>Masculin</item>
    </string-array>
    <string-array name="discipline_arrays">
        <item>Judo Jujitsu</item>
        <item>Kendo</item>
        <item>Naginata</item>
        <item>Jodo</item>
        <item>Iaida</item>
        <item>Kyudo</item>
        <item>Sport chanbara</item>
    </string-array>
    <string name="Conditions"><u>Conditions</u></string>
    <string name="CNIL"><u>CNIL</u></string>
    <string name="Refus"><u>Refus</u></string>
    <string name="conditions_assurance">Vous trouvez un extrait des conditions des contrats souscrits par la FFJDA en cliquant sur le lien suivant :</string>
    <string name="refus_assurance">Si toutefois vous ne souhaitez pas y souscrire, veuillez prendre connaissance des modalités :</string>
    <string name="souscrire_assurance">Je souscris à l\'assurance :</string>
    <string name="autorisation_cnil">J\'autorise l\'utilisation de mes données personnelles :</string>
    <string name="conditions_cnil">Vous autorisez expressément la FFDJA à traiter et conserver par informatique les données vous concernant. Plus d\'informations en cliquant sur le lien suivant.</string>
    <string name="bad_email">Adresse email incorrecte !</string>
    <string name="bad_email_desc">L\'adresse email doit être de la forme suivante exemple@exemple.fr.</string>
    <string name="champs_requis">Tous les champs sont requis !</string>
    <string name="champs_requis_desc">Veuillez renseigner tous les champs pour continuer.</string>
    <string name="bad_cp">Code postal incorrect !</string>
    <string name="bad_cp_desc">Le code postal doit être de la forme suivante 95000 ou le département de la forme 95.</string>
    <string name="recherche_club">Entrez un code postal pour trouver un club :</string>
    <string name="club_choisi">Club choisi :</string>
    <string name="Club_manquant">Club manquant !</string>
    <string name="Club_manquant_desc">Renseignez un code postal ou le departement désiré, validez et choississez le club dans la liste.</string>
    <string name="Redirection">Redirection</string>
    <string name="Redirection_desc">Vous allez être redirigé sur le site de la Fédération Française de Judo, voulez-vous continer ?</string>
    <string name="Inscription_effectuee">Inscription Effectuée</string>
    <string name="Inscription_effectuee_desc">Votre inscription a bien été prise en compte, vous avez dû recevoir un mail à l\'adresse suivante : %1$s. De plus, vous pouvez vous rendre directement dans votre club pour prendre contact avec le professeur.</string>
    <string name="Ajout_effectuee">Ajout de Licence effectué</string>
    <string name="Ajout_effectuee_desc">L\'ajout de la licence a bien été pris en compte, vous avez dû recevoir un mail de confirmation. De plus, vous pouvez vous rendre directement dans votre club pour prendre contact avec le professeur.</string>
    <string name="renouvellement_effectuee">Renouvellement effectué</string>
    <string name="renouvellement_effectuee_desc">Le renouvellement de la licence a bien été pris en compte, vous avez dû recevoir un mail de confirmation. De plus, vous pouvez vous rendre directement dans votre club pour prendre contact avec le professeur.</string>
    <string name="Inscription_en_cours">Inscription en cours ...</string>
    <string name="recuperation_club">Récupération du club actuel ...</string>
    <string name="Inscription_echec">Erreur inscription</string>
    <string name="Inscription_erreur_desc">Il semble que vous avez déjà procédé à une inscription/renouvellement dans cette discpline pour l\'année en cours.</string>
    <string name="accueil">Accueil</string>
    <string name="licence">Licence</string>
    <string name="objectif">Objectifs</string>
    <string name="calendrier">Calendrier</string>
    <string name="bienvenu">Bienvenue</string>
    <string name="connexion_ok">Vous êtes connecté sur l\'application de la FFJDA</string>
    <string name="attention">Attention !</string>
    <string name="ok">OK</string>
    <string name="erreur_connexion">Vous devez vous connecter pour accéder à cette partie de l\'application.</string>
    <string name="no_connexion_at_login">Pour vous connecter vous devez disposer d\'une connexion internet</string>
    <string name="no_connexion">Pour accéder à cette partie de l\'application, vous devez disposer d\'une connexion internet.</string>
    <string name="not_connected">Pour accéder à cette partie de l\'application, vous devez vous connecter avec vos identifiants.</string>
    <string name="se_connecter">Se connecter</string>
    <string name="se_connecter_plus_tard">Se connecter plus tard</string>
    <string name="calendar_type">TYPE</string>
    <string name="calendar_categorie">CATEGORIE D\'AGE</string>
    <string name="calendar_a_partir">A PARTIR DE</string>
    <string name="calendar_jusqua">JUSQU\'AU</string>
    <string name="FFJ">Fédération Française de \nJudo</string>
    <string name="acceuil_naviguer">Naviguer directement sur notre site</string>
    <string name="boutique">Boutique</string>
    <string name="acceuil_nouveautes">Les dernières nouveautés\nn\'attendent que vous</string>
    <string name="acceuil_judomag">Retrouvez\nchaque mois\nvotre magazine\npréféré	</string>
    <string name="nee_le">Né(e) le :</string>
    <string name="Saison_en_cours">Saison en cours</string>
    <string name="Saison_precedentes">Saison précédentes</string>
    <string name="phone_missing">Le numéro de téléphone ne nous est pas fournis.</string>
    <string name="contact">Contact :</string>
    <string name="Annuler">Annuler</string>
    <string name="Retour">Retour</string>
    <string name="Parcours">Parcours</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="title_activity_inscription2">Inscription2Activity</string>
    <string name="title_activity_licences">LicencesActivity</string>
    <string name="title_activity_detail_licence">DetailLicenceActivity</string>
    <string name="title_activity_renouvellement">RenouvellementActivity</string>
    <string name="title_activity_inscription3">Inscription3Activity</string>
    <string name="title_activity_code_postal">CodePostalActivity</string>
    <string name="title_activity_historique_club">Historique Club</string>
    <string name="Compte_licencie_explain">Créez votre compte espace licencié en vous connectant sur www.judo.com.</string>
    <string name="Compte_licencie">Compte licencié</string>
    <string name="title_activity_renouvellement_ajout">RenouvellementAjoutActivity</string>
    <string name="title_activity_renouvellement_ajout2">RenouvellementAjout2Activity</string>
    <string name="title_activity_compte_licencie_creation1">CompteLicencieCreation1</string>
</resources>