<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ffjda.ffjudo.views.Inscription1Activity">
    <ImageView
        android:id="@+id/activity_inscription1_logoffjda"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/bandeau_ffjda"/>
        <RelativeLayout
            android:layout_below="@+id/activity_inscription1_logoffjda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:background="@layout/round_border_blue_background_grey">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@layout/tops_radius_background_blue"
                android:clickable="true"
                android:id="@+id/activity_inscription1_view_top">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textSize="20dp"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/saisie_nouvelle_licence"
                        android:textColor="@color/white"
                        android:layout_margin="10dp"/>
                </LinearLayout>
                <TextView
                    android:textSize="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/etape_1"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"/>
            </RelativeLayout>
            <ImageView
                android:layout_below="@id/activity_inscription1_view_top"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:src="@drawable/picto_arrow_down"/>
            <ScrollView
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/activity_inscription1_suivant_layout_view"
                android:layout_below="@id/activity_inscription1_view_top">
                <LinearLayout
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/activity_inscription1_nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/_nom"
                        android:maxLines="1"
                        android:singleLine="true"/>
                    <EditText
                        android:id="@+id/activity_inscription1_prenom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/_prenom"
                        android:maxLines="1"
                        android:singleLine="true"/>
                    <Spinner
                        android:id="@+id/activity_inscription1_sexe"
                        android:entries="@array/sexe_arrays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/activity_inscription1_naissance"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:hint="@string/_date_naissance"
                            android:maxLines="1"
                            android:singleLine="true"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="40dp"
                            android:src="@drawable/picto_calendar"
                            android:onClick="setDate"/>
                    </LinearLayout>
                    <EditText
                        android:id="@+id/activity_inscription1_adresse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:hint="@string/Adresse"
                        android:maxLines="1"
                        android:singleLine="true"/>
                    <EditText
                        android:id="@+id/activity_inscription1_code_postal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:inputType="number"
                        android:hint="@string/_code_postal"
                        android:maxLines="1"
                        android:singleLine="true"/>
                    <EditText
                        android:id="@+id/activity_inscription1_ville"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/Ville"
                        android:maxLines="1"
                        android:singleLine="true"/>
                    <EditText
                        android:id="@+id/activity_inscription1_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:hint="@string/_adresse_mail"
                        android:maxLines="1"
                        android:singleLine="true"/>
                    <EditText
                        android:id="@+id/activity_inscription1_telephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:inputType="phone"
                        android:hint="@string/Telephone"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </LinearLayout>
            </ScrollView>
            <RelativeLayout
                android:id="@+id/activity_inscription1_suivant_layout_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:paddingBottom="10dp">
                <RelativeLayout
                    android:id="@+id/activity_inscription1_suivant_layout"
                    android:layout_width="match_parent"
                    android:background="@drawable/blue_layout_clickable"
                    android:clickable="true"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:text="@string/suivant"/>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
</RelativeLayout>
