<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ffjda.ffjudo.views.Inscription1Activity">
    <ImageView
        android:id="@+id/activity_inscription3_logoffjda"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/bandeau_ffjda"/>
    <RelativeLayout
        android:layout_below="@+id/activity_inscription3_logoffjda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:background="@layout/round_border_blue_background_grey">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@layout/tops_radius_background_blue"
            android:clickable="true"
            android:id="@+id/activity_inscription3_view_top">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textSize="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/saisie_nouvelle_licence"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"/>
            </LinearLayout>
            <TextView
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/etape_3"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>
        </RelativeLayout>
        <ImageView
            android:layout_below="@id/activity_inscription3_view_top"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:src="@drawable/picto_arrow_down"/>
        <ScrollView
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/activity_inscription3_suivant_layout_view"
            android:layout_below="@id/activity_inscription3_view_top">
            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center">
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="10"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:layout_centerInParent="true"
                            android:layout_width="match_parent"
                            android:textSize="20dp"
                            android:layout_height="wrap_content"
                            android:text="@string/souscrire_assurance"
                            android:textColor="@color/blue"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_marginLeft="10dp"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>
                </LinearLayout>
                <TextView
                    android:textSize="12dp"
                    android:textColor="@color/blue"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conditions_assurance"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/Conditions"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@color/blue"/>
                <TextView
                    android:textSize="12dp"
                    android:textColor="@color/blue"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/refus_assurance"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/Refus"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@color/blue"/>
                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center">
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="10"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:layout_centerInParent="true"
                            android:layout_width="match_parent"
                            android:textSize="20dp"
                            android:layout_height="wrap_content"
                            android:text="@string/autorisation_cnil"
                            android:textColor="@color/blue"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_marginLeft="10dp"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>
                </LinearLayout>
                <TextView
                    android:textSize="12dp"
                    android:textColor="@color/blue"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conditions_cnil"/>
                <TextView
                    android:text="@string/CNIL"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@color/blue"/>
            </LinearLayout>
        </ScrollView>
        <RelativeLayout
            android:id="@+id/activity_inscription3_suivant_layout_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:paddingBottom="10dp">
            <RelativeLayout
                android:id="@+id/activity_inscription3_suivant_layout"
                android:layout_width="match_parent"
                android:background="@drawable/blue_layout_clickable"
                android:clickable="true"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="@string/suivant"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
